# docs-mcp

./: .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  crates-openapi.json  crates_to_test.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: cache.rs  error.rs  lib.rs  main.rs  server.rs
src/cratesio/: client.rs
src/docsrs/: client.rs  mod.rs  parser.rs  types.rs
src/sparse_index/: client.rs  mod.rs  types.rs
src/tools/: crate_dependencies_list.rs  crate_dependents_list.rs  crate_docs_get.rs  crate_downloads_get.rs  crate_get.rs  crate_impls_list.rs  crate_item_get.rs  crate_item_list.rs  crate_list.rs  crate_readme_get.rs  crate_version_get.rs  crate_versions_list.rs  mod.rs
tests/: integration_cratesio.rs  integration_docsrs.rs  mcp_server.rs  unit_cache_zstd.rs  unit_docsrs_parser.rs  unit_sparse_index.rs
tests/fixtures/: clap_4.5.59.json
